<resources>
    <string name="app_name">APP_HealthCheckInSystem</string>
    <string name="record">打卡</string>
    <string name="chart">图表</string>
    <string name="mine">我的</string>
    <string name="title_activity_login">个人健康打卡系统</string>
    <string name="please_input_username">请输入用户名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="add_health_record">添加健康记录</string>
    <string name="temperature">体温 (°C)</string>
    <string name="symptoms">症状</string>
    <string name="record_time">记录时间</string>
    <string name="remark">备注</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="no_health_data_yet">暂无健康数据</string>
</resources>