<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="32dp"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- 标题 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/title_activity_login"
        android:textColor="@color/colorLifeBlue"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- 用户名输入框 -->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/please_input_username"
        android:inputType="text"
        android:padding="12dp" />

    <!-- 密码输入框 -->
    <!--<EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="请输入密码"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:layout_marginBottom="24dp" />-->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:hint="@string/please_input_password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <!-- 登录按钮 -->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/color_primary"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <!-- 加载进度条 -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>